--- a/index.html
+++ b/index.html
@@ -89,6 +89,27 @@ gtag('config', 'UA-44534026-1');
 <h1>❏ NOTE에서 최근 업데이트된 글</h1>
 <div class="article-link">
 <div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/imagemagick.html">ImageMagick</a></h2>
+<div class="article-link-date">
+2020년 4월 21일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/svg.html">Scalable Vector Graphics</a></h2>
+<div class="article-link-date">
+2020년 4월 21일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/git.html">Git</a></h2>
+<div class="article-link-date">
+2020년 4월 21일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/dockerfile.html">Dockerfile</a></h2>
 <div class="article-link-date">
 2020년 4월 21일 수정</div>
@@ -134,27 +155,6 @@ gtag('config', 'UA-44534026-1');
 <h2><a class="article-link-title" href="/note/special-char-name.html">특수 문자 이름</a></h2>
 <div class="article-link-date">
 2020년 4월 20일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/css.html">CSS</a></h2>
-<div class="article-link-date">
-2020년 4월 19일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/git.html">Git</a></h2>
-<div class="article-link-date">
-2020년 4월 19일 수정</div>
-</div>
-</div>
-<div class="article-link">
-<div class="article-link-title-block">
-<h2><a class="article-link-title" href="/note/emacs.html">Emacs</a></h2>
-<div class="article-link-date">
-2020년 4월 19일 수정</div>
 </div>
 </div>
 </div>
