--- a/note/macos.html
+++ b/note/macos.html
@@ -68,9 +68,9 @@ gtag('config', 'UA-44534026-1');
 <div id="table-of-contents">
 <h2>≡ 목차 (Table of Contents)</h2><div id="text-table-of-contents">
 <ul>
-<li><a href="#org584f17d">이모티콘(Emoji) 쉽게 입력하기</a></li>
-<li><a href="#org09ac38e">셸에서 iCloud Drive 접근하기</a></li>
-<li><a href="#orgd31c551">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
+<li><a href="#orgb07e917">이모티콘(Emoji) 쉽게 입력하기</a></li>
+<li><a href="#org68686f7">셸에서 iCloud Drive 접근하기</a></li>
+<li><a href="#orgfa49eab">다음으로 열기(Open with) 메뉴 초기화하기</a></li>
 </ul>
 </div>
 </div>
@@ -95,17 +95,17 @@ macOS는 그 애플의 독자 OS다.
 아래는 macOS와 관련된 팁이다.
 </p>
 
-<div id="outline-container-org584f17d" class="outline-2">
-<h2 id="org584f17d">이모티콘(Emoji) 쉽게 입력하기</h2>
-<div class="outline-text-2" id="text-org584f17d">
+<div id="outline-container-orgb07e917" class="outline-2">
+<h2 id="orgb07e917">이모티콘(Emoji) 쉽게 입력하기</h2>
+<div class="outline-text-2" id="text-orgb07e917">
 <p>
 단축키 <code>Control+Command+Space</code>
 </p>
 </div>
 </div>
-<div id="outline-container-org09ac38e" class="outline-2">
-<h2 id="org09ac38e">셸에서 iCloud Drive 접근하기</h2>
-<div class="outline-text-2" id="text-org09ac38e">
+<div id="outline-container-org68686f7" class="outline-2">
+<h2 id="org68686f7">셸에서 iCloud Drive 접근하기</h2>
+<div class="outline-text-2" id="text-org68686f7">
 <p>
 아래 디렉터리가 iCloud Drive의 위치다.
 </p>
@@ -125,9 +125,9 @@ macOS는 그 애플의 독자 OS다.
 </p>
 </div>
 </div>
-<div id="outline-container-orgd31c551" class="outline-2">
-<h2 id="orgd31c551">다음으로 열기(Open with) 메뉴 초기화하기</h2>
-<div class="outline-text-2" id="text-orgd31c551">
+<div id="outline-container-orgfa49eab" class="outline-2">
+<h2 id="orgfa49eab">다음으로 열기(Open with) 메뉴 초기화하기</h2>
+<div class="outline-text-2" id="text-orgfa49eab">
 <p>
 파인더에서 특정 파일을 오른쪽 클릭해서 나타나는 팝업 메뉴에서
 '다음으로 열기' 혹은 'Open with' 항목이
@@ -147,6 +147,20 @@ macOS Catalina에서도 잘 동작하는 것으로 확인되었다.
 </section>
 <hr /><div class="backlinks-container">
 <h1>이 글을 링크하는 글들</h1>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/imagemagick.html">ImageMagick</a></h2>
+<div class="article-link-date">
+2020년 4월 21일 수정</div>
+</div>
+</div>
+<div class="article-link">
+<div class="article-link-title-block">
+<h2><a class="article-link-title" href="/note/svg.html">Scalable Vector Graphics</a></h2>
+<div class="article-link-date">
+2020년 4월 21일 수정</div>
+</div>
+</div>
 <div class="article-link">
 <div class="article-link-title-block">
 <h2><a class="article-link-title" href="/note/python.html">Python</a></h2>
